# ab_test

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: python-versions.json
.github/workflows/: ci.yml
ab_test/: __init__.py  _contingency.py  _display.py  confidence_intervals.py  power_calculations.py  stats_tests.py  utils.py
ab_test/bayesian_binomial/: __init__.py  contingency.py  credible_intervals.py  power_calculations.py  stats_tests.py  utils.py
ab_test/binomial/: __init__.py  confidence_intervals.py  contingency.py  power_calculations.py  stats_tests.py  utils.py
ab_test/frequentist_binomial/: __init__.py  confidence_intervals.py  contingency.py  power_calculations.py  stats_tests.py  utils.py
tests/: test_confidence_intervals.py  test_power_calculations.py  test_stats_test.py  test_utils.py
tests/bayesian_binomial/: test_bayesian_contingency.py  test_bayesian_power_calculations.py  test_bayesian_stats_tests.py  test_contingency.py  test_credible_intervals.py  test_stats_tests.py
tests/binomial/: test_confidence_intervals.py  test_contingency.py  test_power_calculations.py  test_stats_test.py  test_utils.py
tests/frequentist_binomial/: test_confidence_intervals.py  test_contingency.py  test_power_calculations.py  test_stats_test.py  test_utils.py
