[project]
name = "ab-test"
version = "0.1.0"
description = "Analyze the effects of an AB test using Python"
authors = [
    {name = "ConorMcNamara",email = "conor.s.mcnamara@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy (>=1.24.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "polars (>=1.27.1,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.3.5,<9.0.0)",
    "mypy (>=1.0.0)",
    "types-tabulate (>=0.9.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["ab_test", '.']

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"